--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -1,11 +1,23 @@
 # this file saves brushorder
 # the first one (upper left) will be selected at startup
+bi011
+bi010
+s001
+bi002
+bi009
+bi008
+bi004
+bi006
 o043
+bi003
+bi001
+bi000
 ink
 pencil
-charcoal
 o031
+charcoal
 o000
+s000
 o011
 o022
 blur
@@ -14,16 +26,13 @@ o033
 o018
 old_b004
 o501
-loosedots
 o512
 o945
 o665
 o519
 bulk
-o028
 o009
 o020
-s000
 old_b008
 o005
 o007
@@ -36,12 +45,14 @@ o041
 o032
 o021
 o036
+o028
 o037
+handschrift
 o017
 o019
 o014
 o012
-s001
 old_b024
 o006
 o013
+loosedots
