committing stale cleanups / optimizations
svn://old.homeip.net/code/mypaint@419

--- a/Makefile.am
+++ b/Makefile.am
@@ -37,7 +37,8 @@ mydrawwidget_la_SOURCES = \
 	brush_dab.c \
 	helpers.c \
 	mapping.c \
-	mymarshal.c
+	mymarshal.c \
+	stroke_recording.c
 
 CLEANFILES = mydrawwidget.c
 EXTRA_DIST = mydrawwidget.override
