Fix (complete) uninstall code in nsis script
svn://old.homeip.net/code/mypaint@426

--- a/nsis/mypaint.nsi.in
+++ b/nsis/mypaint.nsi.in
@@ -93,8 +93,12 @@ Section "Uninstall"
   RMDir  /r "$INSTDIR\bin"
   RMDir  /r "$INSTDIR\lib"
   RMDir  /r "$INSTDIR\share"
+  RMDIR  /r "$INSTDIR\etc"
+  RMDIR  /r "$INSTDIR\include"
+  RMDIR  /r "$INSTDIR\man"
+  RMDIR  /r "$INSTDIR\contrib"
+  RMDIR  /r "$INSTDIR\manifest"
   Delete    "$INSTDIR\*.*"
-
   Delete "$DESKTOP\${APP_NAME}.lnk"
   Delete "$SMPROGRAMS\${APP_NAME}\*.*"
   RMDir  "$SMPROGRAMS\${APP_NAME}"
