remove layerswindow experiment, update Makefile.am
svn://old.homeip.net/code/mypaint@467

--- a/Makefile.am
+++ b/Makefile.am
@@ -60,7 +60,8 @@ mypaintlib_PYTHON = \
         functionwindow.py \
         helpers.py \
         infinitemydrawwidget.py \
-        layerswindow.py
+        command.py \
+        document.py
 
 mypaintbrushesdir=$(pkgdatadir)/brushes
 
