more sofisticated gesture-detection code (color picker only) note: stroke data logging by default, for fine-tuning + octave script show.m
svn://old.homeip.net/code/mypaint@523

--- a/Makefile.am
+++ b/Makefile.am
@@ -39,6 +39,8 @@ mydrawwidget_la_SOURCES = \
 	helpers.c \
 	mapping.c \
 	mymarshal.c \
+	lfd.c \
+	gestures.c \
 	stroke_recorder.c
 
 CLEANFILES = mydrawwidget.defs.c mydrawwidget.defs  mydrawwidget.c brushsettings.h mymarshal.h mymarshal.c
