very experimental "angle" input + brushes using it
svn://old.homeip.net/code/mypaint@580

--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -1,9 +1,12 @@
 # this file saves brushorder
 # the first one (upper left) will be selected at startup
-s012
-s009
-s003
+o985
+o885
+o878
+o388
+o688
 s010
+s003
 charcoal
 ink
 pencil
@@ -14,17 +17,20 @@ s011
 s000
 s018
 s008
+bu000
 o011
 s006
 s007
 o033
+s009
+s012
 s016
 s019
 s023
 s014
 o007
 s005
-old_b004
+old_o985
 bi003
 s015
 bi010
