Looks like we should not include the icon extension. It should get stripped anyway, but this doesn't seem to work everywhere. http://standards.freedesktop.org/icon-theme-spec/icon-theme-spec-latest.html#icon_lookup http://www.internettablettalk.com/forums/showpost.php?p=142956&postcount=4
svn://svn.gna.org/svn/mypaint/trunk@11

--- a/desktop/mypaint.desktop
+++ b/desktop/mypaint.desktop
@@ -6,6 +6,6 @@ Comment=Paint images
 GenericName=Painting Images
 MimeType=application/x-mypaint
 Type=Application
-Icon=mypaint_48.png
+Icon=mypaint_48
 Categories=Graphics;
 
