--- a/desktop/Makefile.am
+++ b/desktop/Makefile.am
@@ -2,5 +2,5 @@ applicationdir=$(datadir)/applications/
 application_DATA = mypaint.desktop
 
 icondir=$(datadir)/pixmaps
-icon_DATA = 32x32/mypaint.png
+icon_DATA = mypaint_48.png
 
