--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -11,7 +11,6 @@ bulk
 s011
 s000
 s018
-s008
 o011
 s006
 s007
@@ -20,19 +19,20 @@ s016
 s019
 s023
 s014
+b002
 o007
 s005
-old_b004
+aold_b004
 bi003
+b027
 s015
 bi010
-bi000
+b019
 bi001
 s004
 s021
-s001
+s020
 o000
-bi009
 bi004
 bi006
 s002
@@ -40,20 +40,46 @@ o031
 o022
 o014
 o945
+s008
 o398
 o512
-o501
+b005
+s013
+s009
+s012
+bi000
 o665
 basic
-s020
 o009
 o020
 old_b008
 o001
 o032
-o021
 o028
 o017
+b003
+s001
 old_b024
+ab029
 o006
+ab006
+ab001
 loosedots
+ab007
+ab003
+b011
+ab043
+aold_b000
+ab002
+ab033
+ab026
+ab020
+aold_b003
+ab011
+ab023
+b007
+b008
+bigcharcoal
+ab028
+ab009
+s017
