Ugh. Forgot to add one file.
svn://svn.gna.org/svn/mypaint/branches/0.5@59

--- a/Makefile.am
+++ b/Makefile.am
@@ -60,6 +60,7 @@ mypaintlib_PYTHON = \
         functionwindow.py \
         helpers.py \
         infinitemydrawwidget.py \
+	settingswindow.py \
         command.py \
         document.py
 
