--- a/lib/SConscript
+++ b/lib/SConscript
@@ -11,7 +11,7 @@ env.Clean('.', 'mypaintlib_wrap.cc')
 env.Clean('.', 'mypaintlib.py')
 
 # python extension module
-src = 'mypaintlib_wrap.cpp helpers.cpp mapping.cpp'
+src = 'mypaintlib_wrap.cpp helpers.cpp'
 module = env.LoadableModule('_mypaintlib', Split(src), SHLIBPREFIX="")
 
 
