moved helpers.cpp into headerfile-only implementation, as everything else
svn://svn.gna.org/svn/mypaint/trunk@138

--- a/lib/SConscript
+++ b/lib/SConscript
@@ -12,7 +12,7 @@ env.Clean('.', 'mypaintlib_wrap.cc')
 env.Clean('.', 'mypaintlib.py')
 
 # python extension module
-src = 'mypaintlib_wrap.cpp helpers.cpp'
+src = 'mypaintlib_wrap.cpp'
 if sys.platform == "win32": # there 's a better way to do this 
 	module = env.LoadableModule('_mypaintlib', Split(src), SHLIBPREFIX="", SHLIBSUFFIX=".pyd")
 else:
