--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -1,8 +1,12 @@
 # this file saves brushorder
 # the first one (upper left) will be selected at startup
+oil
+pick_and_drag
+o594
 o985
 o885
 o878
+dry_brush
 o388
 o688
 s010
@@ -30,7 +34,6 @@ s014
 o748
 o007
 s005
-old_o985
 aold_b004
 bi003
 o397
@@ -54,14 +57,11 @@ o398
 o512
 o312
 s013
-s009
-s012
 bi000
 o665
 basic
 o009
 o020
-old_o834
 o001
 o032
 o028
@@ -74,21 +74,22 @@ o006
 ab006
 ab001
 loosedots
-ao558
-ao826
 o300
 ab043
 aold_b000
-ao748
 ab033
 ab026
 ab020
-aold_o826
-ao300
 ab023
 o558
 o834
 bigcharcoal
 ab028
 ab009
-s017
+ab007
+ab003
+ab002
+old_b008
+aold_b003
+ab011
+s109
