adding blendpaint brush
svn://svn.gna.org/svn/mypaint/trunk@232

--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -1,46 +1,36 @@
 # this file saves brushorder
 # the first one (upper left) will be selected at startup
-dry_brush
-s017
-oil
-pick_and_drag
-o594
-o985
-o885
-o878
-o388
-o688
+s011
 s010
+o505
+dry_brush
+blendpaint
+s109
+o594
 s003
 charcoal
 ink
+s017
 pencil
-smudge
 blur
+smudge
+pick_and_drag
+s007
 bulk
-s011
 s000
 s018
-bu000
 o011
 s006
-s007
 o033
-s009
-s012
 s016
 s019
 s023
 s014
-o748
 o007
 s005
-aold_b004
 bi003
-o397
 s015
 bi010
-o888
 bi001
 s004
 s021
@@ -56,8 +46,8 @@ o945
 s008
 o398
 o512
-o312
-s013
+s009
+s012
 bi000
 o665
 basic
@@ -67,30 +57,41 @@ o001
 o032
 o028
 o017
-o826
 s001
 old_b024
-ab029
 o006
-ab006
-ab001
 loosedots
+bigcharcoal
+old_b008
+o748
+o397
+o888
+o312
+s013
+o826
+ab029
+ab006
 o300
 ab043
-aold_b000
 ab033
 ab026
 ab020
 ab023
 o558
 o834
-bigcharcoal
 ab028
 ab009
 ab007
-ab003
-ab002
-old_b008
-aold_b003
 ab011
-s109
+o985
+o885
+o878
+o388
+o688
+bu000
+ab003
+aold_b000
+ab002
+aold_b003
+ab001
+aold_b004
