renaming some brushes
svn://svn.gna.org/svn/mypaint/trunk@273

--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -1,16 +1,16 @@
 # this file saves brushorder
 # the first one (upper left) will be selected at startup
-s024
-s010
+modelling
+redbrush
 dry_brush
 charcoal
-o505
+charcoal2
 bi006
-blendpaint
+blend+paint
 o594
 s003
 ink
-s017
+textured_ink
 pencil
 blur
 smudge
@@ -20,10 +20,9 @@ bulk
 s000
 s018
 o011
-s006
+hair
 s014
-o007
-s005
+glow
 bi003
 s015
 s011
@@ -39,14 +38,15 @@ o031
 o022
 o014
 o945
+pointy_ink
 s008
 o398
 o512
 s109
-s009
-s012
+goghish_small
+goghish_big
 bi000
-o665
+leaves
 basic
 o009
 o020
@@ -54,24 +54,23 @@ o001
 o032
 o028
 o017
-s001
-old_b024
-ab029
-o006
+coarse_bulk_1
+coarse_bulk_2
+coarse_bulk_3
+coarse_bulk_4
 loosedots
 bigcharcoal
 old_b008
-o748
 o397
 o888
-o312
-s013
+soft_sting
+hard_sting
 o826
 o300
 ab043
 ab033
 ab026
-ab020
+hue_fun
 ab023
 o558
 o834
@@ -81,6 +80,6 @@ ab007
 ab011
 o388
 ab002
-aold_b003
+slow
 ab001
 aold_b004
