--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -1,5 +1,10 @@
 # this file saves brushorder
 # the first one (upper left) will be selected at startup
+aspect_fun_3
+aspect_fun_4
+aspect_fun_2
+aspect_fun_5
+aspect_fun_1
 modelling
 redbrush
 dry_brush
@@ -83,3 +88,4 @@ ab002
 slow
 ab001
 aold_b004
+
