--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -1,5 +1,6 @@
 # this file saves brushorder
 # the first one (upper left) will be selected at startup
+aspec_fun_5
 aspect_fun_3
 aspect_fun_4
 aspect_fun_2
@@ -88,4 +89,3 @@ ab002
 slow
 ab001
 aold_b004
-
