new brush: "subtle pencil" using filtered pressure for size changes (works great IMO)
svn://svn.gna.org/svn/mypaint/trunk@320

--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -1,5 +1,7 @@
 # this file saves brushorder
 # the first one (upper left) will be selected at startup
+subtle_pencil
+ink
 aspec_fun_5
 aspect_fun_3
 aspect_fun_4
@@ -11,11 +13,11 @@ redbrush
 dry_brush
 charcoal
 charcoal2
+fadeout
 bi006
 blend+paint
 o594
 s003
-ink
 textured_ink
 pencil
 blur
