adding eraser brush
svn://svn.gna.org/svn/mypaint/trunk@365

--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -12,12 +12,12 @@ modelling
 redbrush
 dry_brush
 charcoal
-charcoal2
 fadeout
 bi006
 blend+paint
 o594
 s003
+ink_eraser
 textured_ink
 pencil
 blur
@@ -27,7 +27,6 @@ s007
 bulk
 s000
 s018
-o011
 hair
 s014
 glow
@@ -49,7 +48,6 @@ s021
 s020
 bi004
 s002
-o031
 o022
 o014
 o945
@@ -92,7 +90,6 @@ o834
 ab028
 ab009
 ab007
-ab011
 o388
 ab002
 slow
