--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -1,12 +1,11 @@
 # this file saves brushorder
 # the first one (upper left) will be selected at startup
-s001
+s006
 subtle_pencil
 ink
 aspec_fun_5
 aspect_fun_3
-aspect_fun_4
-aspect_fun_2
+grass
 aspect_fun_5
 aspect_fun_1
 modelling
@@ -18,7 +17,6 @@ bi006
 blend+paint
 o594
 s003
-ink_eraser
 textured_ink
 pencil
 blur
@@ -54,6 +52,7 @@ o014
 o945
 pointy_ink
 s008
+ink_eraser
 o398
 o512
 s109
