--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -1,12 +1,13 @@
 # this file saves brushorder
 # the first one (upper left) will be selected at startup
+s001
+grass2
 s006
 subtle_pencil
 ink
 aspec_fun_5
 aspect_fun_3
 grass
-aspect_fun_5
 aspect_fun_1
 modelling
 redbrush
