some "water color"-like brushes
svn://svn.gna.org/svn/mypaint/trunk@370

--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -1,5 +1,9 @@
 # this file saves brushorder
 # the first one (upper left) will be selected at startup
+solid_water
+blurred_water
+painting_knife
+s005
 s001
 grass2
 s006
