brush collection work
svn://svn.gna.org/svn/mypaint/trunk@385

--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -1,42 +1,22 @@
 # this file saves brushorder
 # the first one (upper left) will be selected at startup
-solid_water
-blurred_water
-painting_knife
-s005
-s001
-grass2
-s006
-subtle_pencil
-ink
-aspec_fun_5
-aspect_fun_3
-grass
-aspect_fun_1
-modelling
+s003
 redbrush
+modelling
 dry_brush
 charcoal
-fadeout
-bi006
-blend+paint
-o594
-s003
-textured_ink
+pointy_ink
+aspec_fun_5
+aspect_fun_1
+ink
 pencil
 blur
 smudge
-pick_and_drag
 s007
+solid_water
+soft_water
+painting_knife
 bulk
-s000
-s018
-hair
-s014
-glow
-bi003
-s015
-s011
 pencil-2b
 pencil-hb
 pencil-h
@@ -44,30 +24,46 @@ pencil-6b
 pencil-8b
 pencil-rubber
 pencil-blur
+s000
+s018
+blend+paint
+textured_ink
+bi006
+hair
+subtle_pencil
+s014
+glow
+long_grass
+short_grass
+aspect_fun_3
+bi003
+s015
+s011
 bi010
+s009
 s004
 s023
 bi001
 s021
 s020
+pick_and_drag
+s006
+o594
 bi004
 s002
 o022
 o014
 o945
-pointy_ink
 s008
 ink_eraser
 o398
 o512
 s109
-goghish_small
-goghish_big
 bi000
 leaves
 basic
 o009
-o020
+hue_fun
 o001
 o032
 o028
@@ -88,7 +84,6 @@ o300
 ab043
 ab033
 ab026
-hue_fun
 ab023
 o558
 o834
@@ -98,5 +93,3 @@ ab007
 o388
 ab002
 slow
-ab001
-aold_b004
