Splatter and marker brushes.

--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -20,6 +20,12 @@ pencil-6b
 pencil-8b
 pencil-rubber
 pencil-blur
+marker-01
+marker-02
+marker-03
+marker-04
+marker-05
+marker-06
 s000
 s018
 blend+paint
@@ -66,6 +72,12 @@ o009
 hue_fun
 o001
 o032
+splatter-01
+splatter-02
+splatter-03
+splatter-04
+splatter-05
+splatter-06
 o028
 o017
 coarse_bulk_1
