new brushes: characoal, airbrush...
The airbrush "real" try to emulate the movement of the hand in one real
airbrush. Slow for details and fast for big diemeter and with the
presion more o less paint. But is not necessary use the presion, you can
use "S" and "A" for start to paint, to acomplish a realistic feeling, like
if you are using a real airbrush. :) The digital airbrush is more easy to
use but not with a real movement of hand.

--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -26,6 +26,18 @@ marker-03
 marker-04
 marker-05
 marker-06
+charcoal-04
+charcoal-03
+charcoal-01
+charcoal-02
+charcoal-blur1
+charcoal-blur2
+pencil-mechanical
+pencil-color
+ballpoint-pen
+airbrush-real-dirty
+airbrush-digital
+airbrush-real
 s000
 s018
 blend+paint
