--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 .emacs.*
 .sconsign.dblite
 TAGS
+tags
 brushlib/brushsettings.hpp
 lib/_mypaintlib.so
 lib/mypaintlib.py
@@ -11,3 +12,5 @@ lib/mypaintlib_wrap.cpp
 lib/mypaintlib_wrap.os
 mypaint
 options.cache
+*.mo
+*.pot
