--- a/po/SConscript
+++ b/po/SConscript
@@ -7,16 +7,20 @@ for src in env.Glob('*.po'):
     languages.append(lang)
     dst = join(lang, "LC_MESSAGES", 'mypaint.mo')
     Command(dst, src, 'msgfmt $SOURCE -o $TARGET')
-print 'Translations:', ', '.join(languages)
 
 lang = ARGUMENTS.get('translate')
 if lang:
+    env.Execute('git grep --full-name --files-with-matches "^from gettext import" .. | sort > POTFILES.in')
+    env.Execute('intltool-update -g mypaint --pot')
     if lang == 'all':
         translate = languages
+    elif lang == 'pot':
+        translate = []
     else:
         translate = [lang]
     for lang in translate:
-        print 'Updating translation:', lang
         env.Execute('intltool-update -g mypaint %s' % lang)
+    # don't build any targets
+    Exit()
 
 Return('languages')
