make 'scons -c' clean up more

--- a/lib/SConscript
+++ b/lib/SConscript
@@ -6,7 +6,7 @@ import sys
 # I have given up. Scons just can't get the dependencies right with those
 # code generators. Let's give scons a "normal" c++ project to dependency-scan.
 env.Execute('swig -o mypaintlib_wrap.cpp -python -c++ mypaintlib.i')
-env.Clean('.', 'mypaintlib_wrap.cc')
+env.Clean('.', 'mypaintlib_wrap.cpp')
 env.Clean('.', 'mypaintlib.py')
 
 # python extension module
