--- a/lib/SConscript
+++ b/lib/SConscript
@@ -16,4 +16,6 @@ if sys.platform == "win32": # there 's a better way to do this
 else:
     module = env.LoadableModule('_mypaintlib', Split(src), SHLIBPREFIX="")
 
+    env.Command('strokemap_pb2.py', 'strokemap.proto', 'protoc --python_out=. lib/strokemap.proto')
+
 Return('module')
