adding David Revoy's brush set V2
For details read this forum thread:
http://forum.intilinux.com/mypaint-finished-work/david-revoy-(-deevad-)-mypaint-sketchbook-gallery-brushes/

--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -1,5 +1,22 @@
 # this file saves brushorder
 # the first one (upper left) will be selected at startup
+basic-round
+basic-flat
+wet-round
+wet-flat
+ink-fill
+ink-pen
+detail-soft
+details-hard
+textured-charcoal
+textured-grain
+textured-angle
+texture-tree
+Splatter-drop
+Splatter-drop2
+smudge-blur
+smudge-classic
+soft-large
 ink
 s003
 redbrush
