restore the old pencil-2b preview
also reorder slightly

--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -17,10 +17,12 @@ Splatter-drop2
 smudge-blur
 smudge-classic
 soft-large
-ink
+pencil-2b-deevad
 s003
 redbrush
 modelling
+pointy_ink
+ink
 dry_brush
 charcoal
 pencil
@@ -59,7 +61,6 @@ s000
 s018
 blend+paint
 textured_ink
-pointy_ink
 aspec_fun_5
 aspect_fun_1
 bi006
@@ -135,21 +136,14 @@ acrylic-04-only-water
 acrylic-05-paint
 acrylic-05-with-water
 acrylic-05-only-water
-watercolor-01-paint
-watercolor-01-water
-watercolor-02-paint
-watercolor-02-water
 water-01
 water-02
 water-03
 water-04
 water-05
 water-06
-decoration-01
-decoration-02
 decoration-03
 decoration-04
-decoration-05
 decoration-06
 decoration-07
 decoration-08
