--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -1,5 +1,5 @@
-# this file saves brushorder
-# the first one (upper left) will be selected at startup
+# this file saves brush groups and order
+Group: default
 basic-round
 basic-flat
 wet-round
@@ -187,3 +187,105 @@ ab007
 o388
 ab002
 slow
+Group: tanda
+charcoal-04
+charcoal-03
+charcoal-01
+charcoal-02
+charcoal-blur1
+charcoal-blur2
+pencil-2b
+pencil-hb
+pencil-h
+pencil-6b
+pencil-8b
+pencil-rubber
+pencil-blur
+pencil-mechanical
+pencil-color
+ballpoint-pen
+marker-01
+marker-02
+marker-03
+marker-04
+marker-05
+marker-06
+airbrush-real-dirty
+airbrush-digital
+airbrush-real
+oil-01-paint
+oil-01-clean
+oil-02-paint
+oil-02-clean
+oil-03-paint
+oil-03-clean
+oil-04-paint
+oil-04-clean
+oil-05-paint
+oil-05-clean
+oil-06-paint
+oil-06-clean
+oil-mop
+acrylic-01-paint
+acrylic-01-with-water
+acrylic-01-only-water
+acrylic-02-paint
+acrylic-02-with-water
+acrylic-02-only-water
+acrylic-03-paint
+acrylic-03-with-water
+acrylic-03-only-water
+acrylic-04-paint
+acrylic-04-with-water
+acrylic-04-only-water
+acrylic-05-paint
+acrylic-05-with-water
+acrylic-05-only-water
+water-01
+water-02
+water-03
+water-04
+water-05
+water-06
+decoration-03
+decoration-04
+decoration-06
+decoration-07
+decoration-08
+decoration-09
+texture-01
+texture-02
+texture-03
+texture-04
+texture-05
+texture-06
+texture-07
+texture-08
+texture-09
+texture-10
+texture-11
+texture-12
+splatter-01
+splatter-02
+splatter-03
+splatter-04
+splatter-05
+splatter-06
+Group: deevad
+basic-round
+basic-flat
+wet-round
+wet-flat
+ink-fill
+ink-pen
+detail-soft
+details-hard
+textured-charcoal
+textured-grain
+textured-angle
+texture-tree
+Splatter-drop
+Splatter-drop2
+smudge-blur
+smudge-classic
+soft-large
