add back the rest of Tanda's brushes
We got plenty of space now.

--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -142,12 +142,6 @@ water-03
 water-04
 water-05
 water-06
-decoration-03
-decoration-04
-decoration-06
-decoration-07
-decoration-08
-decoration-09
 texture-01
 texture-02
 texture-03
@@ -247,8 +241,15 @@ water-03
 water-04
 water-05
 water-06
+watercolor-01-water
+watercolor-01-paint
+watercolor-02-water
+watercolor-02-paint
+decoration-01
+decoration-02
 decoration-03
 decoration-04
+decoration-05
 decoration-06
 decoration-07
 decoration-08
@@ -271,24 +272,6 @@ splatter-03
 splatter-04
 splatter-05
 splatter-06
-Group: deevad
-basic-round
-basic-flat
-wet-round
-wet-flat
-ink-fill
-ink-pen
-detail-soft
-details-hard
-textured-charcoal
-textured-grain
-textured-angle
-texture-tree
-Splatter-drop
-Splatter-drop2
-smudge-blur
-smudge-classic
-soft-large
 Group: ramón
 4B_pencil
 Sketch_1
@@ -335,3 +318,21 @@ Grass_1
 Hair_
 Glow
 Clouds
+Group: deevad
+basic-round
+basic-flat
+wet-round
+wet-flat
+ink-fill
+ink-pen
+detail-soft
+details-hard
+textured-charcoal
+textured-grain
+textured-angle
+texture-tree
+Splatter-drop
+Splatter-drop2
+smudge-blur
+smudge-classic
+soft-large
