updated brushset (git-0-8-v1) by Ramón Miranda
"Updated to work nicely in hires with a good performance."

Original post: http://forum.intilinux.com/mypaint-finished-work/mypaint-brushes-pack-for-git-0-8-v1-by-ramon-miranda/
Downloaded from: http://mypaintatelier.googlecode.com/files/MyPaint%20Brushes%20Pack.%20for%20GIT%200.8%20V1.zip

--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -279,6 +279,7 @@ Sketch_2
 Grass_P
 Charcoal
 P._Shade
+P.Shade2
 Soft_Eraser
 Hard_Eraser
 PenBrush
@@ -295,7 +296,9 @@ Blur
 Smudge
 Smear
 Knife
+Grain
 Classic_Paint
+RS_blendOP
 wet_round
 Wet_Soft
 Wet_Solid
@@ -315,6 +318,9 @@ snow_2
 Sparks
 tree
 Grass_1
+Grass_2
+Grass_3
+tree_2
 Hair_
 Glow
 Clouds
