rename brushes with name conflicts
03:44 < iwantsomewaffles> quickie bug report: filenames of a few brushes conflict on case-insenstive filesystems (older hfs)

--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -277,7 +277,7 @@ Group: ramón
 Sketch_1
 Sketch_2
 Grass_P
-Charcoal
+Charcoal_ramon
 P._Shade
 P.Shade2
 Soft_Eraser
@@ -292,8 +292,8 @@ HardSoft
 Glazing
 Round
 Brush_blur
-Blur
-Smudge
+Blur_ramon
+Smudge_ramon
 Smear
 Knife
 Grain
@@ -322,7 +322,7 @@ Grass_2
 Grass_3
 tree_2
 Hair_
-Glow
+Glow_ramon
 Clouds
 Group: Ico-dY
 Ico_Felt_pen
