brush collection work
Delete some old brushes.
Create new groups: ink and experimental.
Update the default group.

--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -1,5 +1,7 @@
 # this file saves brush groups and order
 Group: default
+pointy_ink
+ink
 basic-round
 basic-flat
 wet-round
@@ -18,11 +20,22 @@ smudge-blur
 smudge-classic
 soft-large
 pencil-2b-deevad
+blend+paint
+Ico_OC_Pen
+Ico_OC_Brush
+Ico_OC_Hard_Pen
+Ico_Line_Sketcher
+Ico_Crazy_Line
+Ico_Line_Dropping
+Ico_Flake_Dropping
+Ico_Water_Line
+Ico_Soft_Oil
+Ico_Hard_Oil
+Ico_Water_Stain
+Ico_Water_Stain_B
+Ico_Watercolor_01
 s003
 redbrush
-modelling
-pointy_ink
-ink
 dry_brush
 charcoal
 pencil
@@ -59,55 +72,27 @@ airbrush-digital
 airbrush-real
 s000
 s018
-blend+paint
 textured_ink
-aspec_fun_5
 aspect_fun_1
+Ico_Calligraphic_Pen
 bi006
+o512
 hair
 subtle_pencil
-s014
 glow
 bulk
 long_grass
 short_grass
 aspect_fun_3
 bi003
-s015
 s011
 bi010
-s009
-s004
-s023
 bi001
-s021
-s020
-pick_and_drag
 s006
 o594
-bi004
-s002
 o022
 o014
-o945
-s008
 ink_eraser
-o398
-o512
-s109
-bi000
-leaves
-basic
-o009
-hue_fun
-o001
-o032
-splatter-01
-splatter-02
-splatter-03
-splatter-04
-splatter-05
-splatter-06
 oil-01-paint
 oil-01-clean
 oil-02-paint
@@ -155,32 +140,16 @@ texture-10
 texture-11
 texture-12
 o028
-o017
 coarse_bulk_1
 coarse_bulk_2
 coarse_bulk_3
 coarse_bulk_4
-loosedots
-bigcharcoal
-old_b008
+ab028
 o397
-o888
 soft_sting
 hard_sting
 o826
-o300
 ab043
-ab033
-ab026
-ab023
-o558
-o834
-ab028
-ab009
-ab007
-o388
-ab002
-slow
 Group: tanda
 charcoal-04
 charcoal-03
@@ -324,6 +293,42 @@ tree_2
 Hair_
 Glow_ramon
 Clouds
+Group: deevad
+basic-round
+basic-flat
+wet-round
+wet-flat
+ink-fill
+ink-pen
+detail-soft
+details-hard
+textured-charcoal
+textured-grain
+textured-angle
+texture-tree
+Splatter-drop
+Splatter-drop2
+smudge-blur
+smudge-classic
+soft-large
+Group: ink
+ink
+ink_hard
+pointy_ink
+ink-pen
+Ico_Calligraphic_Pen
+PenBrush
+aspect_fun_1
+textured_ink
+aspec_fun_5
+Ico_Rigid_Pen
+Delayed_Line
+s008
+Ico_Precise_Pen_02
+Ico_Precise_Pen
+100%_Opaque
+bulk
+ink-fill
 Group: Ico-dY
 Ico_Felt_pen
 Ico_Micro_Felt_Pen
@@ -385,21 +390,27 @@ Ico_Dry_Pen
 Ico_Liquid_Pen_+
 Ico_Cutting_Flat
 Ico_Wet_Flat
-Group: deevad
-basic-round
-basic-flat
-wet-round
-wet-flat
-ink-fill
-ink-pen
-detail-soft
-details-hard
-textured-charcoal
-textured-grain
-textured-angle
-texture-tree
-Splatter-drop
-Splatter-drop2
-smudge-blur
-smudge-classic
-soft-large
+Group: experimental
+s004
+s021
+s023
+s020
+pick_and_drag
+o032
+hue_fun
+leaves
+o009
+o945
+o398
+s109
+bi000
+s014
+o001
+basic
+o017
+loosedots
+o834
+ab009
+o388
+o300
+s015
