brush collection work
Shrink default collection a bit, introduce "classic" group.

--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -1,7 +1,45 @@
 # this file saves brush groups and order
+Group: classic
+dry_brush
+charcoal
+pencil
+blur
+smudge
+s007
+ink_eraser
+solid_water
+soft_water
+painting_knife
+s006
+redbrush
+bi003
+ab043
+s000
+s018
+subtle_pencil
+textured_ink
+aspect_fun_1
+bi006
+bi001
+o512
+hair
+glow
+bulk
+long_grass
+short_grass
+aspect_fun_3
+s011
+o028
+coarse_bulk_1
+coarse_bulk_2
+coarse_bulk_3
+coarse_bulk_4
+ab028
+o397
+soft_sting
+hard_sting
+o826
 Group: default
-pointy_ink
-ink
 basic-round
 basic-flat
 wet-round
@@ -20,6 +58,8 @@ smudge-blur
 smudge-classic
 soft-large
 pencil-2b-deevad
+Sketch_2
+RS_blendOP
 blend+paint
 Ico_OC_Pen
 Ico_OC_Brush
@@ -38,13 +78,9 @@ s003
 redbrush
 dry_brush
 charcoal
-pencil
-blur
-smudge
 s007
 solid_water
 soft_water
-painting_knife
 pencil-h
 pencil-hb
 pencil-2b
@@ -56,49 +92,29 @@ charcoal-01
 charcoal-02
 charcoal-03
 charcoal-04
-charcoal-blur1
-charcoal-blur2
 marker-01
 marker-02
 marker-03
 marker-04
 marker-05
 marker-06
-pencil-mechanical
-pencil-color
-ballpoint-pen
-airbrush-real-dirty
-airbrush-digital
-airbrush-real
-s000
-s018
+ink
 textured_ink
-aspect_fun_1
+pointy_ink
 Ico_Calligraphic_Pen
-bi006
+ink_eraser
 o512
+hard_sting
 hair
-subtle_pencil
 glow
-bulk
 long_grass
 short_grass
-aspect_fun_3
-bi003
-s011
-bi010
-bi001
-s006
-o594
 o022
-o014
-ink_eraser
+o594
 oil-01-paint
 oil-01-clean
 oil-02-paint
 oil-02-clean
-oil-03-paint
-oil-03-clean
 oil-04-paint
 oil-04-clean
 oil-05-paint
@@ -106,11 +122,7 @@ oil-05-clean
 oil-06-paint
 oil-06-clean
 oil-mop
-acrylic-01-paint
-acrylic-01-with-water
 acrylic-01-only-water
-acrylic-02-paint
-acrylic-02-with-water
 acrylic-02-only-water
 acrylic-03-paint
 acrylic-03-with-water
@@ -121,35 +133,15 @@ acrylic-04-only-water
 acrylic-05-paint
 acrylic-05-with-water
 acrylic-05-only-water
-water-01
 water-02
-water-03
-water-04
 water-05
 water-06
 texture-01
-texture-02
-texture-03
-texture-04
 texture-05
-texture-06
 texture-07
 texture-08
-texture-09
 texture-10
 texture-11
-texture-12
-o028
-coarse_bulk_1
-coarse_bulk_2
-coarse_bulk_3
-coarse_bulk_4
-ab028
-o397
-soft_sting
-hard_sting
-o826
-ab043
 Group: tanda
 charcoal-04
 charcoal-03
@@ -402,6 +394,7 @@ leaves
 o009
 o945
 o398
+soft_sting
 s109
 bi000
 s014
@@ -414,3 +407,5 @@ ab009
 o388
 o300
 s015
+o014
+bi010
