brush collection: no brush appears only in "default"
And return the 2B pencil that I borrowed from Deevad.

--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -6,6 +6,7 @@ pencil
 blur
 smudge
 s007
+blend+paint
 ink_eraser
 solid_water
 soft_water
@@ -14,8 +15,10 @@ s006
 redbrush
 bi003
 ab043
-s000
 s018
+o826
+s003
+s000
 subtle_pencil
 textured_ink
 aspect_fun_1
@@ -24,6 +27,8 @@ bi001
 o512
 hair
 glow
+o022
+o594
 bulk
 long_grass
 short_grass
@@ -38,7 +43,6 @@ ab028
 o397
 soft_sting
 hard_sting
-o826
 Group: default
 basic-round
 basic-flat
@@ -303,6 +307,7 @@ Splatter-drop2
 smudge-blur
 smudge-classic
 soft-large
+pencil-2b-deevad
 Group: ink
 ink
 ink_hard
