brush collection: move ink up, minor stuff
Make Ico's Calligraphic Pen the same appearance as other inks.
Remove some of Deevads brushes from the default set
(the fill ink, and another one that has a glitch with orientation)

--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -48,13 +48,10 @@ basic-round
 basic-flat
 wet-round
 wet-flat
-ink-fill
-ink-pen
 detail-soft
 details-hard
 textured-charcoal
 textured-grain
-textured-angle
 texture-tree
 Splatter-drop
 Splatter-drop2
@@ -62,6 +59,9 @@ smudge-blur
 smudge-classic
 soft-large
 pencil-2b-deevad
+ink
+pointy_ink
+Ico_Calligraphic_Pen_noborder
 Sketch_2
 RS_blendOP
 blend+paint
@@ -78,6 +78,7 @@ Ico_Hard_Oil
 Ico_Water_Stain
 Ico_Water_Stain_B
 Ico_Watercolor_01
+hair
 s003
 redbrush
 dry_brush
@@ -102,19 +103,7 @@ marker-03
 marker-04
 marker-05
 marker-06
-ink
-textured_ink
-pointy_ink
-Ico_Calligraphic_Pen
 ink_eraser
-o512
-hard_sting
-hair
-glow
-long_grass
-short_grass
-o022
-o594
 oil-01-paint
 oil-01-clean
 oil-02-paint
@@ -146,6 +135,13 @@ texture-07
 texture-08
 texture-10
 texture-11
+long_grass
+short_grass
+o594
+o022
+o512
+hard_sting
+glow
 Group: tanda
 charcoal-04
 charcoal-03
