add back brush "modelling"
Removed in 2fad294e2346, now back due to popular request :-)

--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -33,6 +33,7 @@ bulk
 long_grass
 short_grass
 aspect_fun_3
+modelling
 s011
 o028
 coarse_bulk_1
@@ -81,6 +82,7 @@ Ico_Watercolor_01
 hair
 s003
 redbrush
+modelling
 dry_brush
 charcoal
 s007
