brushgroups: capitalize all person names

--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -144,7 +144,7 @@ o022
 o512
 hard_sting
 glow
-Group: tanda
+Group: Tanda
 charcoal-04
 charcoal-03
 charcoal-01
@@ -235,7 +235,7 @@ splatter-03
 splatter-04
 splatter-05
 splatter-06
-Group: ramón
+Group: Ramón
 4B_pencil
 Sketch_1
 Sketch_2
@@ -287,7 +287,7 @@ tree_2
 Hair_
 Glow_ramon
 Clouds
-Group: deevad
+Group: Deevad
 basic-round
 basic-flat
 wet-round
