build: some darvin specific stuff
http://forum.intilinux.com/mypaint-development-and-suggestions/mac-osx-port/15/
http://www.zhadum.ch/osx.diff

--- a/lib/SConscript
+++ b/lib/SConscript
@@ -14,6 +14,8 @@ env.Clean('.', 'mypaintlib.py')
 src = 'mypaintlib_wrap.cpp'
 if sys.platform == "win32": # there 's a better way to do this 
     module = env.LoadableModule('_mypaintlib', Split(src), SHLIBPREFIX="", SHLIBSUFFIX=".pyd")
+elif sys.platform == "darwin":
+    module = env.LoadableModule('_mypaintlib', Split(src), SHLIBPREFIX="", SHLIBSUFFIX=".so")
 else:
     module = env.LoadableModule('_mypaintlib', Split(src), SHLIBPREFIX="")
 
