brushes: brushset update from Ramón
"Almost everything has been retouched to be faster and more acurate. I have
made the pack following the "natural" order of painting. And now we have
good pencils, good ink tools, better and more expressive blenders,brushes
to paint controlling all blend types,  and a bunch of FX ready to be used.
What more can i say? This is a good pack to work in high res, tested again
and again to check the brushes behaviours. and i have to say that they are
very special. Who will discover the secrets or understand the tricks of
these brushes? You can choose between 60 brushes to make your imaginary
worlds became reality."

--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -236,29 +236,33 @@ splatter-04
 splatter-05
 splatter-06
 Group: Ramón
-4B_pencil
 Sketch_1
 Sketch_2
+2B_pencil
+4B_pencil
 Grass_P
-Charcoal_ramon
 P._Shade
 P.Shade2
+Pencil_Ink
 Soft_Eraser
 Hard_Eraser
+Simple_Pen
 PenBrush
+Caligraph
 Marker
 Delayed_Line
 100%_Opaque
 Round_Bl
-Airbrush
 HardSoft
 Glazing
+BigAirbrush
 Round
 Brush_blur
 Blur_ramon
 Smudge_ramon
 Smear
 Knife
+Knife_Jitt
 Grain
 Classic_Paint
 RS_blendOP
@@ -280,13 +284,18 @@ snow_1
 snow_2
 Sparks
 tree
+tree_2
 Grass_1
 Grass_2
 Grass_3
-tree_2
 Hair_
+Hair2
+Water_Splats
+Pastel_1
 Glow_ramon
+Beamlight_01
 Clouds
+Clouds_2
 Group: Deevad
 basic-round
 basic-flat
