update David Revoy's brush set to V3
Article about the brushset:
http://davidrevoy.com/?article33/mypaint-v3-brushkit
License is in deevad/readme.txt

Remove V2 brushes, and do some minor fixes in other brushgroups.

--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -45,21 +45,34 @@ o397
 soft_sting
 hard_sting
 Group: default
-basic-round
-basic-flat
-wet-round
-wet-flat
-detail-soft
-details-hard
-textured-charcoal
-textured-grain
-texture-tree
-Splatter-drop
-Splatter-drop2
-smudge-blur
-smudge-classic
-soft-large
-pencil-2b-deevad
+deevad/painting-normal
+deevad/painting-lowopacity
+deevad/thin-painting-normal
+deevad/thin-painting-lowopacity
+deevad/hard-details
+deevad/flat-basic
+deevad/flat-dry
+deevad/basic-dry
+deevad/eraser
+deevad/classic-pencil
+deevad/Tanda-ballpen
+deevad/annotation-pen
+deevad/grainy-blending
+deevad/chalk
+deevad/charcoal
+deevad/pencil-pastel
+deevad/smooth-blending
+deevad/inkink
+deevad/inking-brush
+deevad/black-marker
+deevad/Ico-dY-oil-blending
+deevad/Tanda-watercolor
+deevad/Tanda-water-mod
+deevad/Tanda-oil-mop
+deevad/soft-large
+deevad/soft-thin
+deevad/splat-spray
+deevad/grainy-spray
 ink
 pointy_ink
 Ico_Calligraphic_Pen_noborder
@@ -82,6 +95,7 @@ Ico_Watercolor_01
 hair
 s003
 redbrush
+aspect_fun_3
 modelling
 dry_brush
 charcoal
@@ -305,32 +319,43 @@ Glow_Airbrush
 Clouds
 Clouds_2
 Group: Deevad
-basic-round
-basic-flat
-wet-round
-wet-flat
-ink-fill
-ink-pen
-detail-soft
-details-hard
-textured-charcoal
-textured-grain
-textured-angle
-texture-tree
-Splatter-drop
-Splatter-drop2
-smudge-blur
-smudge-classic
-soft-large
-pencil-2b-deevad
+deevad/painting-normal
+deevad/painting-lowopacity
+deevad/thin-painting-normal
+deevad/thin-painting-lowopacity
+deevad/hard-details
+deevad/flat-basic
+deevad/flat-dry
+deevad/basic-dry
+deevad/eraser
+deevad/classic-pencil
+deevad/Tanda-ballpen
+deevad/annotation-pen
+deevad/grainy-blending
+deevad/chalk
+deevad/charcoal
+deevad/pencil-pastel
+deevad/smooth-blending
+deevad/inkink
+deevad/inking-brush
+deevad/black-marker
+deevad/Ico-dY-oil-blending
+deevad/Tanda-watercolor
+deevad/Tanda-water-mod
+deevad/Tanda-oil-mop
+deevad/soft-large
+deevad/soft-thin
+deevad/splat-spray
+deevad/grainy-spray
 Group: favorites
 Group: ink
 ink
 ink_hard
 pointy_ink
-ink-pen
 Ico_Calligraphic_Pen
 PenBrush
+deevad/inkink
+deevad/inking-brush
 aspect_fun_1
 textured_ink
 aspec_fun_5
@@ -341,7 +366,6 @@ Ico_Precise_Pen_02
 Ico_Precise_Pen
 100%_Opaque
 bulk
-ink-fill
 Group: Ico-dY
 Ico_Felt_pen
 Ico_Micro_Felt_Pen
