Set of tilt-sensitive brushes.

--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -470,3 +470,11 @@ fur
 1pixel
 pixelblocking
 pixel_hardink
+Group: Tilt
+tilt/impressionism_details
+tilt/impressionism
+tilt/impressionism_small
+tilt/impressionism_smudge
+tilt/puantilism
+tilt/tilt_example
+tilt/tilt_oil_knife
