brushes: tilt markers by Animtim
http://forum.intilinux.com/mypaint-finished-work/some-tilted-markers/msg5504/#msg5504

--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -329,6 +329,16 @@ Beamlight_01
 Glow_Airbrush
 Clouds
 Clouds_2
+Group: Tilt
+tilt/impressionism_details
+tilt/impressionism
+tilt/impressionism_small
+tilt/impressionism_smudge
+tilt/puantilism
+tilt/tilt_example
+tilt/tilt_oil_knife
+animtim/ink-MyMarkerSmall
+animtim/ink-MyMarkerFat
 Group: Deevad
 deevad/painting-normal
 deevad/painting-lowopacity
@@ -470,11 +480,3 @@ fur
 1pixel
 pixelblocking
 pixel_hardink
-Group: Tilt
-tilt/impressionism_details
-tilt/impressionism
-tilt/impressionism_small
-tilt/impressionism_smudge
-tilt/puantilism
-tilt/tilt_example
-tilt/tilt_oil_knife
